hard-gists/841006/run.log
=== Docker Run Log for 841006 ===
Started at: Mi 29. Okt 17:47:42 CET 2025

[2025-10-29 17:47:43] START: Running container for 841006
[2025-10-29 17:47:43] SUCCESS: Container 20b49d93d63177848bbdab94b475c831c62b430276ffe7613bfcffa8e130ca60 started for 841006
=== Container logs for 841006 ===
  File "/snippet.py", line 39
    print "Error: example server code requires Python >= 2.5"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 841006 ===
[2025-10-29 17:47:45] INFO: Container 20b49d93d63177848bbdab94b475c831c62b430276ffe7613bfcffa8e130ca60 has stopped
